--- a/src/styles/LoginPage.css
+++ b/src/styles/LoginPage.css
@@ -1,12 +1,12 @@
 /* Main Layout */
-.login-page {
+.loginPage {
   display: flex;
   min-height: 100vh;
   font-family: "Arial", sans-serif;
 }
 
-.intro-section,
-.login-section {
+.introSection,
+.loginSection {
   flex: 1;
   display: flex;
   align-items: center;
@@ -15,22 +15,22 @@
   position: relative;
 }
 
-.intro-section {
+.introSection {
   background-color: #fff;
 }
 
-.intro-content {
+.introContent {
   text-align: center;
   max-width: 500px;
 }
 
-.intro-content h1 {
+.introContent h1 {
   font-size: 2rem;
   margin-bottom: 20px;
 }
 
 /* Login Section */
-.login-section {
+.loginSection {
   flex-direction: column; /* Stack elements vertically */
   align-items: center;
   justify-content: center;
@@ -38,7 +38,7 @@
   padding: 20px;
 }
 
-.login-container {
+.loginContainer {
   background-color: #fff;
   text-align: center;
   max-width: 550px;
@@ -49,12 +49,12 @@
   justify-content: center;
 }
 
-.login-container hr {
+.loginContainer hr {
   width: 100%;
   margin: 20px 0;
 }
 
-.navbar-logo {
+.navbarLogo {
   width: 150px;
   margin-bottom: 20px;
 }
@@ -74,7 +74,7 @@
   color: #0d6efd;
 }
 
-.issues-fixed {
+.issuesFixed {
   background-color: #fff;
   border-radius: 8px;
   padding: 20px;
@@ -83,13 +83,13 @@
   margin-top: 20px;
 }
 
-.issues-fixed .growth {
+.issuesFixed .growth {
   color: #28a745;
   font-weight: bold;
   margin-left: 10px;
 }
 
-.bottom-left-image {
+.bottomLeftImage {
   position: absolute;
   bottom: 0; /* Adjust as needed */
   left: 0; /* Adjust as needed */
@@ -128,14 +128,14 @@ h2 {
   background-color: #0d6efd;
 }
 
-.login-buttons {
+.loginButtons {
   display: flex;
   flex-direction: column;
   gap: 10px;
   margin: 40px 100px;
 }
 
-.login-btn {
+.loginBtn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -144,9 +144,6 @@ h2 {
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem;
-}
-
-.login-btn {
   color: #24292e;
   background-color: transparent;
   margin-right: 10px;
@@ -189,7 +186,7 @@ h2 {
   width: 100%;
 }
 
-.privacy-policy p {
+.privacyPolicy p {
   font-size: 0.9rem;
   color: #6c757d;
 }
@@ -201,11 +198,11 @@ h2 {
 
 /* Responsive Design */
 @media (max-width: 768px) {
-  .login-page {
+  .loginPage {
     flex-direction: column;
   }
 
-  .login-section {
+  .loginSection {
     flex-direction: column;
     align-items: center;
   }
@@ -214,13 +211,13 @@ h2 {
     margin-top: 20px;
   }
 
-  .login-buttons {
+  .loginButtons {
     margin: 40px 50px;
   }
 }
 
 @media (max-width: 1025px) {
-    .intro-section {
-        display: none;
-      }
+  .introSection {
+    display: none;
+  }
 }
